<resources>
    <string name="app_name">Diversight</string>
    <string name="title_home">Home</string>
    <string name="title_user">Usuário</string>
    <string name="title_home_header">Pesquisas</string>
    <string name="title_emotional_header">Pesquisa\nHumor %1$s</string>
    <string name="title_research_header">Pesquisa\n%1$s</string>
    <string name="question_enunciated">Como você está se sentindo %1$s?</string>
    <string name="status_done">Sua pesquisa foi enviada com sucesso!</string>
    <string name="status_empty">Nenhuma pesquisa disponível\nno momento!</string>
    <string name="home_back">Voltar para home</string>
    <string name="data_user">Alterar dados pessoais</string>
    <string name="name_example">Carlos</string>
    <string name="data_enterprise">Alterar dados da empresa</string>
    <string name="logout">Sair</string>
    <string name="daily">Diária</string>
    <string name="weekly">Semanal</string>
    <string name="nps">NPS</string>
    <string name="adm">Admissional</string>
    <string name="dem">Demissional</string>
    <string name="daily_research">Pesquisas diárias</string>
    <string name="weekly_research">Pesquisas semanais</string>
    <string name="nps_research">Pesquisas trimestrais NPS</string>
    <string name="admdem_research">Pesquisas Demissional / Admissional</string>
    <string name="send">Enviar</string>
    <string name="counter">%1$d de %2$d</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="update_data">Alterar dados</string>
    <string name="name">Nome</string>
    <string name="skin">Cor e/ou Raça</string>
    <string name="select">Selecionar</string>
    <string name="sex">Gênero</string>
    <string name="gender">Orientação sexual</string>
    <string name="pcd">PCD</string>
    <string name="back">Anterior</string>
    <string name="lets_go">Vamos lá!</string>
    <string name="empty_input">Campo vazio!</string>
    <string name="password_do_not_match">As senhas não combinam</string>
    <string name="signup_complete">Cadastro realizado!</string>
    <string name="update_data_user">Dados atualizados</string>
    <string name="error">Erro!</string>
    <string name="birthday">Data de nascimento</string>
    <string name="update">Atualizar</string>
    <string name="select_date">Selecione a data</string>
    <string name="visual">Visual</string>
    <string name="physical">Física</string>
    <string name="hearing">Auditiva</string>
    <string name="intellectual">Intelectual</string>
    <string name="psychosocial">Psicossocial</string>
    <string name="readapted">Reabilitado / Readaptado</string>
    <string name="enterprise">Empresa</string>
    <string name="occupation">Área de atuação</string>
    <string name="office">Cargo</string>
    <string name="next">Próximo</string>

    <!--Emoticons description-->
    <string name="very_sad">Muito ruim</string>
    <string name="normal">Normal</string>
    <string name="bad">Ruim</string>
    <string name="good">Bom</string>
    <string name="very_good">Muito bom</string>

    <!--Skin list-->
    <string-array name="skins_list">
        <item>Branca</item>
        <item>Parda</item>
        <item>Preta</item>
        <item>Amarela</item>
        <item>Indígena</item>
    </string-array>
    <!--Sex list-->
    <string-array name="sex_list">
        <item>Homem cisgênero</item>
        <item>Mulher cisgênero</item>
        <item>Homem transgênero</item>
        <item>Mulher transgênero</item>
        <item>Agênero</item>
        <item>Não binário</item>
    </string-array>
    <!--Gender list-->
    <string-array name="gender_list">
        <item>Heterossexual</item>
        <item>Homossexual</item>
        <item>Bissexual</item>
        <item>Panssexual</item>
        <item>Assexual</item>
    </string-array>
    <!--PCD response list-->
    <string-array name="pcd_response_list">
        <item>Não possui</item>
        <item>Possui</item>
    </string-array>

    <!--First word SignUp-->
    <string name="signup_first_word_user">Olá</string>
    <string name="signup_first_word_enterprise">Agora</string>
    <string name="signup_first_word_email">E-mail</string>
    <string name="signup_first_word_password">Por fim</string>

    <!--Text SignUp-->
    <string name="signup_text_user">Não se preocupe! Seus dados estão seguros conosco e são necessários apenas para confirmarmos a sua identidade.</string>
    <string name="signup_text_enterprise">Precisamos entender um pouco mais sobre o seu momento profissional, pode nos auxiliar?</string>
    <string name="signup_text_email">Não se preocupe! Prometemos enviar apenas informações importantes via e-mail.</string>
    <string name="signup_text_password">Escolha qual senha você utilizará para acessar a nossa plataforma.</string>
    <string name="passwordConfirm">Confirmar senha</string>
    <string name="skip">Pular</string>

    <!--Onboard title-->
    <string name="onboard_title1">Pesquisas Diárias</string>
    <string name="onboard_title2">Análise de NPS</string>
    <string name="onboard_title3">Diversidade</string>

    <!--Onboard text-->
    <string name="onboard_text1">Responda pesquisas referente ao seu humor diário de forma simples e rápida.</string>
    <string name="onboard_text2">Responda de forma segura uma pesquisa trimestral e demonstre a sua satisfação com a empresa atual.</string>
    <string name="onboard_text3">Responda as pesquisas e ajude a transformar o seu ambiente organizacional em um local mais inclusivo.</string>

    <!--Shared keys-->
    <string name="id_shared_pref">shared-pref</string>
    <string name="id_user">user</string>
    <string name="id_onboard_view">onboard_view</string>
    <string name="select_emoticon">Selecione uma emoção!</string>
</resources>