<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.questions.questions_enterprise.EnterpriseQuestionsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Enterprise-->
        <com.metaexploit.diversight.uikit.DiverInputDropdownMenu
            android:id="@+id/inputEnterprise"
            style="@style/DiverInput.Dropdown"
            app:diverLabel="@string/enterprise" />

        <!--Occupation-->
        <com.metaexploit.diversight.uikit.DiverInputDropdownMenu
            android:id="@+id/inputOccupation"
            style="@style/DiverInput.Dropdown"
            app:diverLabel="@string/occupation" />

        <!--Office-->
        <com.metaexploit.diversight.uikit.DiverInputDropdownMenu
            android:id="@+id/inputOffice"
            style="@style/DiverInput.Dropdown"
            app:diverLabel="@string/office"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>