<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign.signup.email.SignEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--First word-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/firstWord"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/signup_first_word_email"
            style="@style/FirstWordSignUp" />

        <!--Text-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"

            app:layout_constraintTop_toBottomOf="@id/firstWord"
            app:layout_constraintStart_toStartOf="parent"

            android:text="@string/signup_text_email"
            style="@style/TextSignUp" />

        <!--Email label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmail"
            style="@style/TitleInput"
            app:layout_constraintTop_toBottomOf="@id/text"

            android:text="@string/email"
            tools:ignore="MissingConstraints" />
        <!--E-mail input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmail"
            style="@style/TextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/txtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                style="@style/TextInputLayoutAuto"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/MaterialButton"
            android:text="@string/next"

            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"

            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>