<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.sign.signup.questions_user.UserQuestionsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Name label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            style="@style/TitleInput"

            android:text="@string/name"
            tools:ignore="MissingConstraints" />
        <!--Name input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtName"
            style="@style/TextInputLayout"
            tools:ignore="MissingConstraints">

            <AutoCompleteTextView
                android:id="@+id/autoName"
                style="@style/TextInputLayoutAuto"
                android:hint="@string/name"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Skin label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSkin"
            style="@style/TitleInput"

            android:text="@string/skin"
            tools:ignore="MissingConstraints" />
        <!--Skin dropdown menu-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerSkin"
            style="@style/DropDownMenuContainer"
            tools:ignore="MissingConstraints">

            <!--Skin Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtSkin"
                style="@style/TextInputLayout.DropDownMenu"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoSkin"
                    style="@style/TextInputLayoutAuto.DropDownMenu"
                    android:layout_width="match_parent"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Skin options-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/listSkin"
                style="@style/DropDownMenuOptions"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edtSkin"
                app:layout_constraintStart_toStartOf="@id/edtSkin"
                app:layout_constraintTop_toTopOf="@id/edtSkin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Sex label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSex"
            style="@style/TitleInput"

            android:text="@string/sex"
            tools:ignore="MissingConstraints" />
        <!--Sex dropdown menu-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerSex"
            style="@style/DropDownMenuContainer"
            tools:ignore="MissingConstraints">

            <!--Sex Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtSex"
                style="@style/TextInputLayout.DropDownMenu"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoSex"
                    style="@style/TextInputLayoutAuto.DropDownMenu"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Sex options-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/listSex"
                style="@style/DropDownMenuOptions"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edtSex"
                app:layout_constraintStart_toStartOf="@id/edtSex"
                app:layout_constraintTop_toTopOf="@id/edtSex" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Gender label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtGender"
            style="@style/TitleInput"

            android:text="@string/gender"
            tools:ignore="MissingConstraints" />
        <!--Gender dropdown menu-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerGender"
            style="@style/DropDownMenuContainer"
            tools:ignore="MissingConstraints">

            <!--Gender Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtGender"
                style="@style/TextInputLayout.DropDownMenu"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoGender"
                    style="@style/TextInputLayoutAuto.DropDownMenu"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Gender options-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/listGender"
                style="@style/DropDownMenuOptions"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edtGender"
                app:layout_constraintStart_toStartOf="@id/edtGender"
                app:layout_constraintTop_toTopOf="@id/edtGender" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--PCD label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPCD"
            style="@style/TitleInput"

            android:text="@string/pcd"
            tools:ignore="MissingConstraints" />
        <!--PCD dropdown menu-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerPCD"
            style="@style/DropDownMenuContainer"
            tools:ignore="MissingConstraints">

            <!--PCD Input-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPCD"
                style="@style/TextInputLayout.DropDownMenu"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoPCD"
                    style="@style/TextInputLayoutAuto.DropDownMenu"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--PCD options-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/listPCD"
                style="@style/DropDownMenuOptions"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edtPCD"
                app:layout_constraintStart_toStartOf="@id/edtPCD"
                app:layout_constraintTop_toTopOf="@id/edtPCD" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--PCD options-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containerPCDOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optVisual"
                style="@style/CheckBox"
                android:text="@string/visual" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optPhysical"
                style="@style/CheckBox"
                android:text="@string/physical" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optHearing"
                style="@style/CheckBox"
                android:text="@string/hearing" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optIntellectual"
                style="@style/CheckBox"
                android:text="@string/intellectual" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optPsychosocial"
                style="@style/CheckBox"
                android:text="@string/psychosocial" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/optReadapted"
                style="@style/CheckBox"
                android:text="@string/readapted" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Birthday label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtBirthday"
            style="@style/TitleInput"

            android:text="@string/birthday"
            tools:ignore="MissingConstraints" />
        <!--Birthday input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtBirthday"
            style="@style/TextInputLayout"
            tools:ignore="MissingConstraints">

            <AutoCompleteTextView
                android:id="@+id/autoBirthday"
                style="@style/TextInputLayoutAuto"
                android:hint="@string/birthday"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>