<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.sign.signup.user.SignUserFragment">

    <!--First word-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/firstWord"

        style="@style/FirstWordSignUp"
        android:text="@string/signup_first_word_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Text-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"

        style="@style/TextSignUp"
        android:text="@string/signup_text_user"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstWord" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/questionsContainer"
        android:name="com.metaexploit.diversight.ui.questions.questions_user.UserQuestionsFragment"
        style="@style/NavHostSignup"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/fragment_questions_user" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/MaterialButton"
        android:layout_marginTop="48dp"

        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/questionsContainer"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>