<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign.signup.password.SignPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--First word-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/firstWord"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/signup_first_word_password"
            style="@style/FirstWordSignUp" />

        <!--Text-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"

            app:layout_constraintTop_toBottomOf="@id/firstWord"
            app:layout_constraintStart_toStartOf="parent"

            android:text="@string/signup_text_password"
            style="@style/TextSignUp" />

        <!--Password label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPassword"
            android:text="@string/password"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            style="@style/TitleInput" />
        <!--Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            style="@style/TextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleTint="@color/cs_input">

            <AutoCompleteTextView
                style="@style/TextInputLayoutAuto"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--Confirm password label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPasswordConfirm"
            android:text="@string/passwordConfirm"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            style="@style/TitleInput" />
        <!--Confirm password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPasswordConfirm"
            style="@style/TextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/txtPasswordConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleTint="@color/cs_input">

            <AutoCompleteTextView
                style="@style/TextInputLayoutAuto"
                android:inputType="textPassword"
                android:hint="@string/passwordConfirm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/MaterialButton"
            android:text="@string/next"

            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordConfirm"

            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>