<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"

            android:layout_marginTop="48dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--E-mail label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmail"
            android:text="@string/email"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            style="@style/TitleInput.Login" />

        <!--E-mail input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmail"
            style="@style/TextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/txtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                style="@style/TextInputLayoutAuto"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="milly@ioasys.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password label-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPassword"
            android:text="@string/password"

            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            style="@style/TitleInput.Login" />

        <!--Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            style="@style/TextInputLayout"

            app:layout_constraintTop_toBottomOf="@id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleTint="@color/cs_input">

            <AutoCompleteTextView
                style="@style/TextInputLayoutAuto"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="123"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"

            android:text="@string/login"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            style="@style/MaterialButton"
            tools:ignore="MissingConstraints"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            style="@style/MaterialButtonText"
            android:text="@string/signup"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            tools:ignore="MissingConstraints"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>